# xav

./: .gitignore  Cargo.toml  build.ps1  build.rs  build.sh
.cargo/: config.toml
.github/workflows/: windows.yml
asm/avx2/: bs.asm  calc_samp_frames.asm  conv.asm  crop_col_stats_u16.asm  crop_col_stats_u8.asm  crop_row_stats_u16.asm  crop_row_stats_u8.asm  deint_nv12_10b.asm  fc_spline.asm
asm/avx512/: calc_samp_frames.asm  conv.asm  crop_col_stats_u16.asm  crop_col_stats_u8.asm  crop_row_stats_u16.asm  crop_row_stats_u8.asm  deint_nv12_10b.asm  pack.asm
src/: audio.rs  avx2.rs  avx512.rs  chunk.rs  copy.rs  crop.rs  dec.rs  enc.rs  encode.rs  encoder.rs  error.rs  ffms.rs  interp_scalar.rs  interp_simd.rs  lavf.rs  main.rs  opus.rs  pipeline.rs  progs.rs  scalar.rs  scd.rs  svt.rs  svterr.rs  tests.rs  tq.rs  util.rs  vship.rs  worker.rs  y4m.rs
src/crop/: avx2.rs  avx512.rs  mod.rs  scalar.rs
src/interp/: avx2.rs  mod.rs  scalar.rs
src/pack/: avx2.rs  avx512.rs  mod.rs  scalar.rs
