[package]
name = "xav"
version = "0.1.0"
authors = ["Emre Akyüz emreakyuz_2@hotmail.com"]
edition = "2024"
description = "Fastest, Most Efficient, Minimal, Chunked & Target Quality Video Encoding"
readme = "README.md"
homepage = "https://github.com/emrakyz/xav"
repository = "https://github.com/emrakyz/xav"
license = "MIT"
keywords = ["av1", "video", "multimedia", "encoding", "quality", "chunking"]
categories = ["multimedia::video", "command-line-utilities"]

[features]
default = [ "vship" ]
static = []
vship = []
nvidia = []
amd = []
vcpkg = []

[dependencies]
libc = "0.2.183"
crossbeam-channel = "0.5.15"
av-scenechange = { git = "https://github.com/emrakyz/av-scenechange", default-features = false, features = ["asm", "static_simd"] }
av1-grain = { version = "0.4.1", default-features = false, features = ["create", "parse"] }
ebur128 = "0.1.10"
sonic-rs = "0.5.7"
serde = { version = "1.0.228", features = ["derive"] }
thiserror = "2.0.18"

[patch.crates-io]
av-decoders = { git = "https://github.com/rust-av/av-decoders" }

[build-dependencies]
vcpkg = "0.2"

[profile.release]
opt-level = 3
codegen-units = 1
strip = "symbols"
debug = 0
panic = "abort"
lto = "fat"

[lints.rust]
warnings = "deny"

[lints.clippy]
correctness = { level = "deny", priority = -1 }
suspicious = { level = "deny", priority = -1 }
perf = { level = "deny", priority = -1 }
complexity = { level = "deny", priority = -1 }
style = { level = "deny", priority = -1 }
pedantic = { level = "deny", priority = -1 }
nursery = { level = "deny", priority = -1 }
cargo = { level = "deny", priority = -1 }
many_single_char_names = "allow"
cast_possible_truncation = "allow"
cast_possible_wrap = "allow"
cast_sign_loss = "allow"
cast_precision_loss = "allow"
cast_ptr_alignment = "allow"

# RESTRICTION LINTS can not be enabled as a group
unwrap_used = "deny"
expect_used = "deny"
unwrap_in_result = "deny"
get_unwrap = "deny"
panic = "deny"
panic_in_result_fn ="deny"
unreachable = "deny"
big_endian_bytes = "deny"
as_pointer_underscore = "deny"
absolute_paths = "deny"
as_underscore = "deny"
clone_on_ref_ptr = "deny"
cognitive_complexity = "deny"
create_dir = "deny"
dbg_macro = "deny"
decimal_literal_representation = "deny"
default_union_representation = "deny"
empty_drop = "deny"
empty_enum_variants_with_brackets = "deny"
empty_structs_with_brackets = "deny"
error_impl_error = "deny"
exhaustive_enums = "deny"
exit = "deny"
filetype_is_file = "deny"
float_cmp_const = "deny"
fn_to_numeric_cast_any = "deny"
host_endian_bytes = "deny"
if_then_some_else_none = "deny"
impl_trait_in_params = "deny"
infinite_loop = "deny"
iter_over_hash_type = "deny"
large_include_file = "deny"
let_underscore_must_use = "deny"
let_underscore_untyped = "deny"
lossy_float_literal = "deny"
map_err_ignore = "deny"
map_with_unused_argument_over_ranges = "deny"
mem_forget = "deny"
missing_assert_message = "deny"
missing_asserts_for_indexing = "deny"
missing_trait_methods = "deny"
mixed_read_write_in_expression = "deny"
mod_module_files = "deny"
module_name_repetitions = "deny"
modulo_arithmetic = "deny"
multiple_inherent_impl = "deny"
mutex_atomic = "deny"
mutex_integer = "deny"
needless_raw_strings = "deny"
non_ascii_literal = "deny"
pathbuf_init_then_push = "deny"
pattern_type_mismatch = "deny"
precedence_bits = "deny"
print_stderr = "deny"
pub_use = "deny"
pub_without_shorthand = "deny"
rc_buffer = "deny"
rc_mutex = "deny"
redundant_test_prefix = "deny"
redundant_type_annotations = "deny"
renamed_function_params = "deny"
rest_pat_in_fully_bound_structs = "deny"
return_and_then = "deny"
same_name_method = "deny"
self_named_module_files = "deny"
str_to_string = "deny"
string_lit_chars_any = "deny"
suspicious_xor_used_as_pow = "deny"
tests_outside_test_module = "deny"
unnecessary_self_imports = "deny"
unneeded_field_pattern = "deny"
separated_literal_suffix = "deny"
unused_result_ok = "deny"
unused_trait_names = "deny"
use_debug = "deny"
verbose_file_reads = "deny"
